--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.14",
+    "@react-navigation/native-stack": "^6.9.24",
     "@react-navigation/stack": "^6.3.25",
     "react": "18.2.0",
     "react-native": "0.73.5",
