--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/slider": "^4.5.0",
     "@react-native-community/viewpager": "^5.0.11",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.14",
@@ -21,9 +22,11 @@
     "react-native": "0.73.5",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-image-picker": "^7.1.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-track-player": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
